Fixing linebreak in dropdown menu items

--- a/sass/core/navigation/dropdown/_index.sass
+++ b/sass/core/navigation/dropdown/_index.sass
@@ -15,6 +15,8 @@
         bottom: 0
         text-align: center
 
+    #mainNavigation
+        white-space: nowrap
 
 .navItem,
 .navCurrent
